--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,19 @@
 Package: boostmath
-Title: What the Package Does (One Line, Title Case)
+Title: Exposing Boost's Math Functions for R
 Version: 0.0.0.9000
 Authors@R:
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person(c("Andrew", "R."), "Johnson", , "andrew.johnson@arjohnsonau.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-7000-8065"))
+Description: 'R' bindings for the various functions and statistical distributions
+    provided by the Boost Math library.
 License: MIT + file LICENSE
+URL: https://github.com/andrjohns/boostmath
+BugReports: https://github.com/andrjohns/boostmath/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 LinkingTo:
     cpp11,
     BH
+NeedsCompilation: yes
+SystemRequirements: GNU make
