--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,9 @@ LinkingTo:
     BH
 NeedsCompilation: yes
 SystemRequirements: GNU make
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+VignetteBuilder: knitr
+Config/testthat/edition: 3
