Add quadrature functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(erf)
 export(erf_inv)
 export(erfc)
 export(erfc_inv)
+export(exp_sinh)
 export(expint_ei)
 export(expint_en)
 export(expm1_boost)
@@ -69,6 +70,8 @@ export(gamma_p_inva)
 export(gamma_q)
 export(gamma_q_inv)
 export(gamma_q_inva)
+export(gauss_kronrod)
+export(gauss_legendre)
 export(gegenbauer)
 export(gegenbauer_derivative)
 export(gegenbauer_prime)
@@ -150,6 +153,7 @@ export(rising_factorial)
 export(rsqrt)
 export(sin_pi)
 export(sinc_pi)
+export(sinh_sinh)
 export(sinhc_pi)
 export(sph_bessel)
 export(sph_bessel_prime)
@@ -160,12 +164,14 @@ export(spherical_harmonic_r)
 export(sqrt1pm1)
 export(tangent_t2n)
 export(tangent_t2n_range)
+export(tanh_sinh)
 export(tgamma)
 export(tgamma1pm1)
 export(tgamma_delta_ratio)
 export(tgamma_lower)
 export(tgamma_ratio)
 export(tgamma_upper)
+export(trapezoidal)
 export(trigamma_boost)
 export(unchecked_bernoulli_b2n)
 export(unchecked_factorial)
