--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,7 +22,7 @@ jobs:
           - {os: macos-latest,   r: 'release'}
           - {os: macos-latest,   r: 'oldrel'}
 
-          - {os: windows-11-arm }
+          - {os: windows-11-arm, r: '4.5.1'}
           - {os: windows-latest, r: 'devel'}
           - {os: windows-latest, r: 'release'}
           - {os: windows-latest, r: 'oldrel'}
@@ -58,12 +58,12 @@ jobs:
       - name: Install R & RTools (ARM64)
         if: matrix.config.os == 'windows-11-arm'
         run: |
-          $url = "https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-4.5.0-aarch64.exe"
+          $url = "https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-${{ matrix.config.r }}-aarch64.exe"
           Invoke-WebRequest `
-              -Uri https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-4.5.0-aarch64.exe `
-              -OutFile R-4.5.0-aarch64.exe
+              -Uri https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-${{ matrix.config.r }}-aarch64.exe `
+              -OutFile R-${{ matrix.config.r }}-aarch64.exe
           Start-Process `
-              -FilePath R-4.5.0-aarch64.exe `
+              -FilePath R-${{ matrix.config.r }}-aarch64.exe `
               -ArgumentList "/INSTALL /VERYSILENT /SUPPRESSMSGBOXES" -Wait
 
           Invoke-WebRequest `
@@ -74,8 +74,8 @@ jobs:
               -ArgumentList "/INSTALL /VERYSILENT /SUPPRESSMSGBOXES" -Wait
 
           echo "C:/rtools45-aarch64/usr/bin;C:/rtools45-aarch64/aarch64-w64-mingw32.static.posix/bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
-          echo "C:\Program Files\R-aarch64\R-4.5.0\bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
-          Remove-Item -Path "R-4.5.0-aarch64.exe"
+          echo "C:\Program Files\R-aarch64\R-${{ matrix.config.r }}\bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
+          Remove-Item -Path "R-${{ matrix.config.r }}-aarch64.exe"
           Remove-Item -Path "rtools45-aarch64.exe"
 
       - name: Install pak on Windows ARM
