Restructure, finite-diff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(expm1_boost)
 export(factorial_boost)
 export(falling_factorial)
 export(fibonacci)
+export(finite_difference_derivative)
 export(gamma_p)
 export(gamma_p_derivative)
 export(gamma_p_inv)
@@ -145,6 +146,8 @@ export(log_hypergeometric_1F1)
 export(max_bernoulli_b2n)
 export(max_factorial)
 export(max_prime)
+export(ooura_fourier_cos)
+export(ooura_fourier_sin)
 export(owens_t)
 export(polygamma)
 export(powm1)
