Start statistical distributions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,27 @@ export(airy_bi)
 export(airy_bi_prime)
 export(airy_bi_zero)
 export(airy_bi_zero_multiple)
+export(arcsine_cdf)
+export(arcsine_lcdf)
+export(arcsine_lpdf)
+export(arcsine_pdf)
+export(arcsine_quantile)
 export(asinh_boost)
 export(atanh_boost)
 export(bernoulli_b2n)
 export(bernoulli_b2n_range)
+export(bernoulli_cdf)
+export(bernoulli_lcdf)
+export(bernoulli_lpdf)
+export(bernoulli_pdf)
+export(bernoulli_quantile)
 export(beta_boost)
+export(beta_cdf)
 export(beta_incomplete)
+export(beta_lcdf)
+export(beta_lpdf)
+export(beta_pdf)
+export(beta_quantile)
 export(betac)
 export(binomial_coefficient)
 export(cbrt)
