--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -10,7 +10,8 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    runs-on: ${{ matrix.config.os }}
+    runs-on: ${{ matrix.config.os == 'wasm' && 'ubuntu-latest' || matrix.config.os }}
+    container: ${{ matrix.config.os == 'wasm' && 'ghcr.io/r-universe-org/build-wasm' || '' }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
@@ -18,6 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          - {os: wasm, r: 'release'}
           - {os: macos-latest,   r: 'devel'}
           - {os: macos-latest,   r: 'release'}
           - {os: macos-latest,   r: 'oldrel'}
@@ -48,7 +50,7 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
-        if: matrix.config.os != 'windows-11-arm'
+        if: matrix.config.os != 'windows-11-arm' && matrix.config.os != 'wasm'
         with:
           r-version: ${{ matrix.config.r }}
           rtools-version: ${{ matrix.config.rtools }}
@@ -97,6 +99,13 @@ jobs:
           pak-version: ${{ matrix.config.os == 'windows-11-arm' && 'none' || 'stable' }}
 
       - uses: r-lib/actions/check-r-package@v2
+        if: matrix.config.os != 'wasm'
         with:
           upload-snapshots: true
           check-dir: '"check"'
+
+      - name: Check WASM build
+        if: matrix.config.os == 'wasm'
+        run: |
+          rwasm::build("local::.")
+        shell: Rscript {0}
