Support complex types, expand ci

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(chebyshev_next)
 export(chebyshev_t)
 export(chebyshev_t_prime)
 export(chebyshev_u)
+export(complex_step_derivative)
 export(cos_pi)
 export(cyl_bessel_i)
 export(cyl_bessel_i_prime)
