--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,16 @@ export(beta_lpdf)
 export(beta_pdf)
 export(beta_quantile)
 export(betac)
+export(binomial_cdf)
 export(binomial_coefficient)
+export(binomial_lcdf)
+export(binomial_lpdf)
+export(binomial_pdf)
+export(binomial_quantile)
+export(cauchy_cdf)
+export(cauchy_lcdf)
+export(cauchy_lpdf)
+export(cauchy_pdf)
 export(cbrt)
 export(chebyshev_clenshaw_recurrence)
 export(chebyshev_clenshaw_recurrence_ab)
@@ -39,6 +48,11 @@ export(chebyshev_next)
 export(chebyshev_t)
 export(chebyshev_t_prime)
 export(chebyshev_u)
+export(chi_squared_cdf)
+export(chi_squared_lcdf)
+export(chi_squared_lpdf)
+export(chi_squared_pdf)
+export(chi_squared_quantile)
 export(complex_step_derivative)
 export(cos_pi)
 export(cyl_bessel_i)
@@ -75,10 +89,25 @@ export(erfc_inv)
 export(expint_ei)
 export(expint_en)
 export(expm1_boost)
+export(exponential_cdf)
+export(exponential_lcdf)
+export(exponential_lpdf)
+export(exponential_pdf)
+export(exponential_quantile)
+export(extreme_value_cdf)
+export(extreme_value_lcdf)
+export(extreme_value_lpdf)
+export(extreme_value_pdf)
+export(extreme_value_quantile)
 export(factorial_boost)
 export(falling_factorial)
 export(fibonacci)
 export(finite_difference_derivative)
+export(fisher_f_cdf)
+export(fisher_f_lcdf)
+export(fisher_f_lpdf)
+export(fisher_f_pdf)
+export(fisher_f_quantile)
 export(gamma_p)
 export(gamma_p_derivative)
 export(gamma_p_inv)
