--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,27 +108,47 @@ export(fisher_f_lcdf)
 export(fisher_f_lpdf)
 export(fisher_f_pdf)
 export(fisher_f_quantile)
+export(gamma_cdf)
+export(gamma_lcdf)
+export(gamma_lpdf)
 export(gamma_p)
 export(gamma_p_derivative)
 export(gamma_p_inv)
 export(gamma_p_inva)
+export(gamma_pdf)
 export(gamma_q)
 export(gamma_q_inv)
 export(gamma_q_inva)
+export(gamma_quantile)
 export(gauss_kronrod)
 export(gauss_legendre)
 export(gegenbauer)
 export(gegenbauer_derivative)
 export(gegenbauer_prime)
+export(geometric_cdf)
+export(geometric_lcdf)
+export(geometric_lpdf)
+export(geometric_pdf)
+export(geometric_quantile)
 export(hermite)
 export(hermite_next)
 export(heuman_lambda)
+export(hyperexponential_cdf)
+export(hyperexponential_lcdf)
+export(hyperexponential_lpdf)
+export(hyperexponential_pdf)
+export(hyperexponential_quantile)
 export(hypergeometric_0F1)
 export(hypergeometric_1F0)
 export(hypergeometric_1F1)
 export(hypergeometric_1F1_regularized)
 export(hypergeometric_2F0)
+export(hypergeometric_cdf)
+export(hypergeometric_lcdf)
+export(hypergeometric_lpdf)
 export(hypergeometric_pFq)
+export(hypergeometric_pdf)
+export(hypergeometric_quantile)
 export(hypot)
 export(ibeta)
 export(ibeta_derivative)
