--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,21 @@ export(ibetac)
 export(ibetac_inv)
 export(ibetac_inva)
 export(ibetac_invb)
+export(inverse_chi_squared_cdf)
+export(inverse_chi_squared_lcdf)
+export(inverse_chi_squared_lpdf)
+export(inverse_chi_squared_pdf)
+export(inverse_chi_squared_quantile)
+export(inverse_gamma_cdf)
+export(inverse_gamma_lcdf)
+export(inverse_gamma_lpdf)
+export(inverse_gamma_pdf)
+export(inverse_gamma_quantile)
+export(inverse_gaussian_cdf)
+export(inverse_gaussian_lcdf)
+export(inverse_gaussian_lpdf)
+export(inverse_gaussian_pdf)
+export(inverse_gaussian_quantile)
 export(jacobi)
 export(jacobi_cd)
 export(jacobi_cn)
@@ -189,6 +204,11 @@ export(jacobi_theta4m1)
 export(jacobi_theta4m1tau)
 export(jacobi_theta4tau)
 export(jacobi_zeta)
+export(kolmogorov_smirnov_cdf)
+export(kolmogorov_smirnov_lcdf)
+export(kolmogorov_smirnov_lpdf)
+export(kolmogorov_smirnov_pdf)
+export(kolmogorov_smirnov_quantile)
 export(laguerre)
 export(laguerre_m)
 export(laguerre_next)
@@ -197,6 +217,11 @@ export(lambert_w0)
 export(lambert_w0_prime)
 export(lambert_wm1)
 export(lambert_wm1_prime)
+export(laplace_cdf)
+export(laplace_lcdf)
+export(laplace_lpdf)
+export(laplace_pdf)
+export(laplace_quantile)
 export(legendre_next)
 export(legendre_next_m)
 export(legendre_p)
