--- a/NAMESPACE
+++ b/NAMESPACE
@@ -232,9 +232,34 @@ export(legendre_q)
 export(lgamma_boost)
 export(log1p_boost)
 export(log_hypergeometric_1F1)
+export(logistic_cdf)
+export(logistic_lcdf)
+export(logistic_lpdf)
+export(logistic_pdf)
+export(logistic_quantile)
+export(lognormal_cdf)
+export(lognormal_lcdf)
+export(lognormal_lpdf)
+export(lognormal_pdf)
+export(lognormal_quantile)
 export(max_bernoulli_b2n)
 export(max_factorial)
 export(max_prime)
+export(non_central_beta_cdf)
+export(non_central_beta_lcdf)
+export(non_central_beta_lpdf)
+export(non_central_beta_pdf)
+export(non_central_beta_quantile)
+export(non_central_chi_squared_cdf)
+export(non_central_chi_squared_lcdf)
+export(non_central_chi_squared_lpdf)
+export(non_central_chi_squared_pdf)
+export(non_central_chi_squared_quantile)
+export(non_central_t_cdf)
+export(non_central_t_lcdf)
+export(non_central_t_lpdf)
+export(non_central_t_pdf)
+export(non_central_t_quantile)
 export(owens_t)
 export(polygamma)
 export(powm1)
