--- a/NAMESPACE
+++ b/NAMESPACE
@@ -260,15 +260,40 @@ export(non_central_t_lcdf)
 export(non_central_t_lpdf)
 export(non_central_t_pdf)
 export(non_central_t_quantile)
+export(normal_cdf)
+export(normal_lcdf)
+export(normal_lpdf)
+export(normal_pdf)
+export(normal_quantile)
 export(owens_t)
+export(pareto_cdf)
+export(pareto_lcdf)
+export(pareto_lpdf)
+export(pareto_pdf)
+export(pareto_quantile)
+export(poisson_cdf)
+export(poisson_lcdf)
+export(poisson_lpdf)
+export(poisson_pdf)
+export(poisson_quantile)
 export(polygamma)
 export(powm1)
 export(prime)
+export(rayleigh_cdf)
+export(rayleigh_lcdf)
+export(rayleigh_lpdf)
+export(rayleigh_pdf)
+export(rayleigh_quantile)
 export(rising_factorial)
 export(rsqrt)
 export(sin_pi)
 export(sinc_pi)
 export(sinhc_pi)
+export(skew_normal_cdf)
+export(skew_normal_lcdf)
+export(skew_normal_lpdf)
+export(skew_normal_pdf)
+export(skew_normal_quantile)
 export(sph_bessel)
 export(sph_bessel_prime)
 export(sph_neumann)
@@ -276,6 +301,11 @@ export(sph_neumann_prime)
 export(spherical_harmonic_i)
 export(spherical_harmonic_r)
 export(sqrt1pm1)
+export(students_t_cdf)
+export(students_t_lcdf)
+export(students_t_lpdf)
+export(students_t_pdf)
+export(students_t_quantile)
 export(tangent_t2n)
 export(tangent_t2n_range)
 export(tgamma)
@@ -285,9 +315,24 @@ export(tgamma_lower)
 export(tgamma_ratio)
 export(tgamma_upper)
 export(trapezoidal)
+export(triangular_cdf)
+export(triangular_lcdf)
+export(triangular_lpdf)
+export(triangular_pdf)
+export(triangular_quantile)
 export(trigamma_boost)
 export(unchecked_bernoulli_b2n)
 export(unchecked_factorial)
 export(unchecked_fibonacci)
+export(uniform_cdf)
+export(uniform_lcdf)
+export(uniform_lpdf)
+export(uniform_pdf)
+export(uniform_quantile)
+export(weibull_cdf)
+export(weibull_lcdf)
+export(weibull_lpdf)
+export(weibull_pdf)
+export(weibull_quantile)
 export(zeta)
 useDynLib(boostmath, .registration = TRUE)
