--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ export(geometric_lcdf)
 export(geometric_lpdf)
 export(geometric_pdf)
 export(geometric_quantile)
+export(hamming_distance)
 export(hermite)
 export(hermite_next)
 export(heuman_lambda)
@@ -209,6 +210,11 @@ export(kolmogorov_smirnov_lcdf)
 export(kolmogorov_smirnov_lpdf)
 export(kolmogorov_smirnov_pdf)
 export(kolmogorov_smirnov_quantile)
+export(l0_pseudo_norm)
+export(l1_distance)
+export(l1_norm)
+export(l2_distance)
+export(l2_norm)
 export(laguerre)
 export(laguerre_m)
 export(laguerre_next)
@@ -242,6 +248,8 @@ export(lognormal_lcdf)
 export(lognormal_lpdf)
 export(lognormal_pdf)
 export(lognormal_quantile)
+export(lp_distance)
+export(lp_norm)
 export(max_bernoulli_b2n)
 export(max_factorial)
 export(max_prime)
@@ -306,6 +314,8 @@ export(students_t_lcdf)
 export(students_t_lpdf)
 export(students_t_pdf)
 export(students_t_quantile)
+export(sup_distance)
+export(sup_norm)
 export(tangent_t2n)
 export(tangent_t2n_range)
 export(tgamma)
@@ -314,6 +324,7 @@ export(tgamma_delta_ratio)
 export(tgamma_lower)
 export(tgamma_ratio)
 export(tgamma_upper)
+export(total_variation)
 export(trapezoidal)
 export(triangular_cdf)
 export(triangular_lcdf)
