--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ export(binomial_lcdf)
 export(binomial_lpdf)
 export(binomial_pdf)
 export(binomial_quantile)
+export(bisect)
+export(bracket_and_solve_root)
 export(cauchy_cdf)
 export(cauchy_lcdf)
 export(cauchy_lpdf)
@@ -130,6 +132,7 @@ export(geometric_lcdf)
 export(geometric_lpdf)
 export(geometric_pdf)
 export(geometric_quantile)
+export(halley_iterate)
 export(hamming_distance)
 export(hermite)
 export(hermite_next)
@@ -253,6 +256,7 @@ export(lp_norm)
 export(max_bernoulli_b2n)
 export(max_factorial)
 export(max_prime)
+export(newton_raphson_iterate)
 export(non_central_beta_cdf)
 export(non_central_beta_lcdf)
 export(non_central_beta_lpdf)
@@ -287,6 +291,7 @@ export(poisson_quantile)
 export(polygamma)
 export(powm1)
 export(prime)
+export(quadratic_roots)
 export(rayleigh_cdf)
 export(rayleigh_lcdf)
 export(rayleigh_lpdf)
@@ -294,6 +299,7 @@ export(rayleigh_pdf)
 export(rayleigh_quantile)
 export(rising_factorial)
 export(rsqrt)
+export(schroder_iterate)
 export(sin_pi)
 export(sinc_pi)
 export(sinhc_pi)
@@ -324,6 +330,7 @@ export(tgamma_delta_ratio)
 export(tgamma_lower)
 export(tgamma_ratio)
 export(tgamma_upper)
+export(toms748_solve)
 export(total_variation)
 export(trapezoidal)
 export(triangular_cdf)
