--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,9 @@ export(chi_squared_pdf)
 export(chi_squared_quantile)
 export(complex_step_derivative)
 export(cos_pi)
+export(cubic_root_condition_number)
+export(cubic_root_residual)
+export(cubic_roots)
 export(cyl_bessel_i)
 export(cyl_bessel_i_prime)
 export(cyl_bessel_j)
