--- a/NAMESPACE
+++ b/NAMESPACE
@@ -295,6 +295,7 @@ export(polygamma)
 export(powm1)
 export(prime)
 export(quadratic_roots)
+export(quartic_roots)
 export(rayleigh_cdf)
 export(rayleigh_lcdf)
 export(rayleigh_lpdf)
