--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(binomial_pdf)
 export(binomial_quantile)
 export(bisect)
 export(bracket_and_solve_root)
+export(brent_find_minima)
 export(cauchy_cdf)
 export(cauchy_lcdf)
 export(cauchy_lpdf)
