--- a/.github/workflows/R-CMD-check-special.yaml
+++ b/.github/workflows/R-CMD-check-special.yaml
@@ -38,7 +38,7 @@ jobs:
               name: "clang20",
               container: "ghcr.io/r-hub/containers/clang20:latest"}
           - { label: "nold",
-              name: "clannoldg20",
+              name: "nold",
               container: "ghcr.io/r-hub/containers/nold:latest"}
 
     env:
