--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -57,18 +57,8 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - name: Cache Windows ARM R Installers
-        id: cache
-        if: matrix.config.os == 'windows-11-arm'
-        uses: actions/cache@v3
-        with:
-          path: |
-            C:/rtools45-aarch64
-            C:/Program Files/R-aarch64
-          key: ${{ runner.os }}-R-${{ matrix.config.r }}-aarch64
-
       - name: Install R & RTools (ARM64)
-        if: matrix.config.os == 'windows-11-arm' && steps.cache.outputs.cache-hit != 'true'
+        if: matrix.config.os == 'windows-11-arm'
         run: |
           $url = "https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-${{ matrix.config.r }}-aarch64.exe"
           Invoke-WebRequest `
@@ -95,9 +85,9 @@ jobs:
           dir.create(libsdir, recursive = TRUE, showWarnings = FALSE)
           cat(sprintf("R_LIB_FOR_PAK=%s\n", libsdir), file = Sys.getenv("GITHUB_ENV"), append = TRUE)
           cat(sprintf("R_LIBS_USER=%s\n", libsdir), file = Sys.getenv("GITHUB_ENV"), append = TRUE)
-          #install.packages("pak", lib = libsdir,
-          #                 repos = c("https://r-lib.r-universe.dev", "https://cloud.r-project.org"),
-          #                 Ncpus = 4);
+          install.packages("pak", lib = libsdir,
+                           repos = c("https://r-lib.r-universe.dev", "https://cloud.r-project.org"),
+                           Ncpus = 4);
         shell: Rscript {0}
 
       - uses: r-lib/actions/setup-r-dependencies@v2
