Macros for distributions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -261,6 +261,11 @@ export(lp_norm)
 export(max_bernoulli_b2n)
 export(max_factorial)
 export(max_prime)
+export(negative_binomial_cdf)
+export(negative_binomial_lcdf)
+export(negative_binomial_lpdf)
+export(negative_binomial_pdf)
+export(negative_binomial_quantile)
 export(newton_raphson_iterate)
 export(non_central_beta_cdf)
 export(non_central_beta_lcdf)
