--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,8 @@ export(cyl_bessel_j_zero)
 export(cyl_bessel_j_zero_multiple)
 export(cyl_bessel_k)
 export(cyl_bessel_k_prime)
+export(cyl_hankel_1)
+export(cyl_hankel_2)
 export(cyl_neumann)
 export(cyl_neumann_prime)
 export(cyl_neumann_zero)
@@ -321,8 +323,11 @@ export(skew_normal_pdf)
 export(skew_normal_quantile)
 export(sph_bessel)
 export(sph_bessel_prime)
+export(sph_hankel_1)
+export(sph_hankel_2)
 export(sph_neumann)
 export(sph_neumann_prime)
+export(spherical_harmonic)
 export(spherical_harmonic_i)
 export(spherical_harmonic_r)
 export(sqrt1pm1)
