--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(erf)
 export(erf_inv)
 export(erfc)
 export(erfc_inv)
+export(exp_sinh)
 export(expint_ei)
 export(expint_en)
 export(expm1_boost)
@@ -315,6 +316,7 @@ export(rsqrt)
 export(schroder_iterate)
 export(sin_pi)
 export(sinc_pi)
+export(sinh_sinh)
 export(sinhc_pi)
 export(skew_normal_cdf)
 export(skew_normal_lcdf)
@@ -340,6 +342,7 @@ export(sup_distance)
 export(sup_norm)
 export(tangent_t2n)
 export(tangent_t2n_range)
+export(tanh_sinh)
 export(tgamma)
 export(tgamma1pm1)
 export(tgamma_delta_ratio)
