--- a/NAMESPACE
+++ b/NAMESPACE
@@ -290,6 +290,8 @@ export(normal_lcdf)
 export(normal_lpdf)
 export(normal_pdf)
 export(normal_quantile)
+export(ooura_fourier_cos)
+export(ooura_fourier_sin)
 export(owens_t)
 export(pareto_cdf)
 export(pareto_lcdf)
