--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,11 @@ export(hamming_distance)
 export(hermite)
 export(hermite_next)
 export(heuman_lambda)
+export(holtsmark_cdf)
+export(holtsmark_lcdf)
+export(holtsmark_lpdf)
+export(holtsmark_pdf)
+export(holtsmark_quantile)
 export(hyperexponential_cdf)
 export(hyperexponential_lcdf)
 export(hyperexponential_lpdf)
@@ -234,6 +239,11 @@ export(lambert_w0)
 export(lambert_w0_prime)
 export(lambert_wm1)
 export(lambert_wm1_prime)
+export(landau_cdf)
+export(landau_lcdf)
+export(landau_lpdf)
+export(landau_pdf)
+export(landau_quantile)
 export(laplace_cdf)
 export(laplace_lcdf)
 export(laplace_lpdf)
@@ -261,6 +271,11 @@ export(lognormal_pdf)
 export(lognormal_quantile)
 export(lp_distance)
 export(lp_norm)
+export(mapairy_cdf)
+export(mapairy_lcdf)
+export(mapairy_lpdf)
+export(mapairy_pdf)
+export(mapairy_quantile)
 export(max_bernoulli_b2n)
 export(max_factorial)
 export(max_prime)
@@ -315,6 +330,11 @@ export(rayleigh_pdf)
 export(rayleigh_quantile)
 export(rising_factorial)
 export(rsqrt)
+export(saspoint5_cdf)
+export(saspoint5_lcdf)
+export(saspoint5_lpdf)
+export(saspoint5_pdf)
+export(saspoint5_quantile)
 export(schroder_iterate)
 export(sin_pi)
 export(sinc_pi)
