--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: boostmath
-Title: Exposing Boost's Math Functions for R
+Title: 'R' Bindings for the 'Boost' Math Functions
 Version: 1.0.0
 Authors@R:
     person(c("Andrew", "R."), "Johnson", , "andrew.johnson@arjohnsonau.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7000-8065"))
 Description: 'R' bindings for the various functions and statistical distributions
-    provided by the Boost Math library.
+    provided by the 'Boost' Math library <https://www.boost.org/doc/libs/boost_1_88_0/libs/math/doc/html/index.html>.
 License: MIT + file LICENSE
-URL: https://github.com/andrjohns/boostmath
+URL: https://github.com/andrjohns/boostmath, https://www.boost.org/doc/libs/boost_1_88_0/libs/math/doc/html/index.html
 BugReports: https://github.com/andrjohns/boostmath/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
