--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ BugReports: https://github.com/andrjohns/boostmath/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Depends:
+    R (>= 3.0.2)
 LinkingTo:
     cpp11,
     BH (>= 1.87.0)
