--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -101,6 +101,7 @@ jobs:
         with:
           upload-snapshots: true
           check-dir: '"check"'
+          args: "--as-cran"
 
       - name: Check WASM build
         if: matrix.config.os == 'wasm'
