--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -101,7 +101,7 @@ jobs:
         with:
           upload-snapshots: true
           check-dir: '"check"'
-          args: "--as-cran"
+          args: '"--as-cran"'
 
       - name: Check WASM build
         if: matrix.config.os == 'wasm'
