--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, dev]
+    branches: [main, master, actions]
   pull_request:
     branches: [main, master]
 
@@ -49,6 +49,8 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
+      - uses: r-lib/actions/setup-tinytex@v2
+
       - uses: r-lib/actions/setup-r@v2
         if: matrix.config.os != 'windows-11-arm' && matrix.config.os != 'wasm'
         with:
@@ -92,7 +94,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: any::rcmdcheck any::V8
           needs: check
           pak-version: ${{ matrix.config.os == 'windows-11-arm' && 'none' || 'stable' }}
 
