--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, dev]
+    branches: [main, master]
   pull_request:
     branches: [main, master]
 
@@ -101,7 +101,6 @@ jobs:
         with:
           upload-snapshots: true
           check-dir: '"check"'
-          args: '"--as-cran"'
 
       - name: Check WASM build
         if: matrix.config.os == 'wasm'
